[gd_scene load_steps=47 format=3 uid="uid://r04pfp0ohm1u"]

[ext_resource type="Script" uid="uid://ct1576t7jful8" path="res://Towers/testing_space.gd" id="1_vtevc"]
[ext_resource type="PackedScene" uid="uid://w0fce54yv0xv" path="res://Towers/tower_base.tscn" id="2_lrt43"]
[ext_resource type="Script" uid="uid://b4x0hopcipugf" path="res://Towers/build_options.gd" id="3_6gguj"]
[ext_resource type="Shader" uid="uid://bdlgodcj6ayir" path="res://Towers/transition.gdshader" id="3_wis2o"]
[ext_resource type="Shader" uid="uid://chudojcwfpmos" path="res://resources/shaders/cool shader.gdshader" id="5_kj7vi"]
[ext_resource type="Script" uid="uid://l2w56u85nvr0" path="res://components/hitbox.gd" id="6_6gguj"]
[ext_resource type="PackedScene" uid="uid://downv7grip0yk" path="res://Towers/TowerTemplate.tscn" id="7_kj7vi"]

[sub_resource type="Gradient" id="Gradient_eojhd"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_86yhs"]
gradient = SubResource("Gradient_eojhd")
width = 720
height = 120

[sub_resource type="Gradient" id="Gradient_86yhs"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_44d0b"]
gradient = SubResource("Gradient_86yhs")
width = 720
height = 120

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44d0b"]
shader = ExtResource("3_wis2o")
shader_parameter/use_sprite_alpha = true
shader_parameter/use_transition_texture = false
shader_parameter/transition_type = 2
shader_parameter/position = Vector2(0.5, 0.5)
shader_parameter/invert = true
shader_parameter/grid_size = Vector2(1, 1)
shader_parameter/rotation_angle = 0.0
shader_parameter/stagger = Vector2(0, 0)
shader_parameter/stagger_frequency = Vector2i(2, 2)
shader_parameter/flip_frequency = Vector2i(1, 1)
shader_parameter/basic_feather = 0.0
shader_parameter/use_mask_size = false
shader_parameter/mask_size = Vector2(100, 100)
shader_parameter/edges = 3
shader_parameter/shape_feather = 0.0
shader_parameter/sectors = 1
shader_parameter/clock_feather = 0.0
shader_parameter/progress = 0.8
shader_parameter/progress_bias = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_vtevc"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 1, 0.933333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lrt43"]
gradient = SubResource("Gradient_vtevc")

[sub_resource type="Gradient" id="Gradient_3eb12"]
offsets = PackedFloat32Array(0.961039)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mmqsq"]
gradient = SubResource("Gradient_3eb12")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_j7nfp"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qcg7h"]
gradient = SubResource("Gradient_j7nfp")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_n1cik"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0383972, 0.0383972, 0.0383971, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_co244"]
gradient = SubResource("Gradient_n1cik")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_82xki"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.306923, 0.306923, 0.306922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_824gr"]
gradient = SubResource("Gradient_82xki")
width = 16
height = 16

[sub_resource type="Theme" id="Theme_tehq5"]
default_font_size = 60
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_selected_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
RichTextLabel/colors/selection_color = Color(0, 0, 0, 1)
RichTextLabel/colors/table_border = Color(0, 0, 0, 1)
RichTextLabel/colors/table_even_row_bg = Color(0, 0, 0, 1)
RichTextLabel/colors/table_odd_row_bg = Color(0, 0, 0, 1)
RichTextLabel/constants/line_separation = 0
RichTextLabel/constants/outline_size = 0
RichTextLabel/constants/shadow_offset_x = 0
RichTextLabel/constants/shadow_offset_y = 0
RichTextLabel/constants/shadow_outline_size = 0
RichTextLabel/constants/table_h_separation = 0
RichTextLabel/constants/table_v_separation = 0
RichTextLabel/constants/text_highlight_h_padding = 0
RichTextLabel/constants/text_highlight_v_padding = 0
RichTextLabel/font_sizes/bold_font_size = 60
RichTextLabel/font_sizes/bold_italics_font_size = 60
RichTextLabel/font_sizes/italics_font_size = 60
RichTextLabel/font_sizes/mono_font_size = 60
RichTextLabel/font_sizes/normal_font_size = 50
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[sub_resource type="Gradient" id="Gradient_wis2o"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0833333, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6gguj"]
gradient = SubResource("Gradient_wis2o")

[sub_resource type="Gradient" id="Gradient_kj7vi"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_suc7n"]
gradient = SubResource("Gradient_kj7vi")

[sub_resource type="Gradient" id="Gradient_k88jk"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.966667, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cxiof"]
gradient = SubResource("Gradient_k88jk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_suc7n"]
shader = ExtResource("5_kj7vi")
shader_parameter/use_sprite_alpha = true
shader_parameter/use_transition_texture = false
shader_parameter/transition_type = 2
shader_parameter/position = Vector2(0, 0)
shader_parameter/invert = false
shader_parameter/grid_size = Vector2(1.5, 1.5)
shader_parameter/rotation_angle = 0.0
shader_parameter/stagger = Vector2(0, 0)
shader_parameter/stagger_frequency = Vector2i(1, 1)
shader_parameter/flip_frequency = Vector2i(1, 1)
shader_parameter/basic_feather = 0.0
shader_parameter/use_mask_size = false
shader_parameter/mask_size = Vector2(100, 100)
shader_parameter/edges = 4
shader_parameter/shape_feather = 0.0
shader_parameter/sectors = 1
shader_parameter/clock_feather = 0.0
shader_parameter/progress = 1.5
shader_parameter/progress_bias = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_cxiof"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_avyug"]
gradient = SubResource("Gradient_cxiof")
width = 48
height = 48

[sub_resource type="Gradient" id="Gradient_oica8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.314316, 0.314316, 0.314316, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u2p0o"]
gradient = SubResource("Gradient_oica8")
width = 48
height = 48

[sub_resource type="CircleShape2D" id="CircleShape2D_wis2o"]
radius = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6gguj"]
shader = ExtResource("5_kj7vi")
shader_parameter/use_sprite_alpha = true
shader_parameter/use_transition_texture = false
shader_parameter/transition_type = 2
shader_parameter/position = Vector2(0.5, 0.5)
shader_parameter/invert = true
shader_parameter/grid_size = Vector2(1, 1)
shader_parameter/rotation_angle = 0.0
shader_parameter/stagger = Vector2(0, 0)
shader_parameter/stagger_frequency = Vector2i(2, 2)
shader_parameter/flip_frequency = Vector2i(1, 1)
shader_parameter/basic_feather = 0.0
shader_parameter/use_mask_size = false
shader_parameter/mask_size = Vector2(100, 100)
shader_parameter/edges = 3
shader_parameter/shape_feather = 0.0
shader_parameter/sectors = 1
shader_parameter/clock_feather = 0.0
shader_parameter/progress = 0.8
shader_parameter/progress_bias = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_suc7n"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0833333, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k88jk"]
gradient = SubResource("Gradient_suc7n")

[sub_resource type="Gradient" id="Gradient_8aiwx"]
offsets = PackedFloat32Array(0.961039)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oica8"]
gradient = SubResource("Gradient_8aiwx")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_xjle4"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dwjnh"]
gradient = SubResource("Gradient_xjle4")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_vat4d"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0383972, 0.0383972, 0.0383971, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nywd5"]
gradient = SubResource("Gradient_vat4d")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_26jbd"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.306923, 0.306923, 0.306922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pyayi"]
gradient = SubResource("Gradient_26jbd")
width = 16
height = 16

[node name="testingSpace" type="Node2D"]
script = ExtResource("1_vtevc")

[node name="towerBase" parent="." instance=ExtResource("2_lrt43")]
position = Vector2(121, 119)

[node name="ui" type="CanvasLayer" parent="."]

[node name="buildOptions" type="TextureRect" parent="ui" groups=["buildOptions"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = 192.0
offset_right = 360.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_86yhs")
script = ExtResource("3_6gguj")

[node name="outline" type="TextureRect" parent="ui/buildOptions"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -60.0
offset_right = 360.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.03, 1.15)
pivot_offset = Vector2(360, 60)
texture = SubResource("GradientTexture2D_44d0b")
metadata/_edit_lock_ = true

[node name="option1" type="TextureRect" parent="ui/buildOptions"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 92.0
offset_top = 23.0
offset_right = 156.0
offset_bottom = 87.0
scale = Vector2(1.5, 1.5)
texture = SubResource("GradientTexture2D_lrt43")
flip_h = true
metadata/_edit_group_ = true

[node name="outline" type="TextureRect" parent="ui/buildOptions/option1"]
show_behind_parent = true
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_mmqsq")
flip_h = true

[node name="click" type="TextureButton" parent="ui/buildOptions/option1"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
texture_normal = SubResource("GradientTexture2D_qcg7h")
texture_pressed = SubResource("GradientTexture2D_co244")
texture_hover = SubResource("GradientTexture2D_824gr")
stretch_mode = 3
flip_h = true

[node name="cost" type="RichTextLabel" parent="ui/buildOptions/option1"]
layout_mode = 0
offset_left = -48.6667
offset_top = -11.0
offset_right = 76.3333
offset_bottom = 130.0
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_tehq5")
bbcode_enabled = true
text = "[center]Cost:
"
fit_content = true
scroll_active = false

[node name="option2" type="TextureRect" parent="ui/buildOptions"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 248.0
offset_top = 23.0
offset_right = 312.0
offset_bottom = 87.0
scale = Vector2(1.5, 1.5)
texture = SubResource("GradientTexture2D_6gguj")
flip_h = true
metadata/_edit_group_ = true

[node name="outline" type="TextureRect" parent="ui/buildOptions/option2"]
show_behind_parent = true
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_mmqsq")
flip_h = true

[node name="click" type="TextureButton" parent="ui/buildOptions/option2"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
texture_normal = SubResource("GradientTexture2D_qcg7h")
texture_pressed = SubResource("GradientTexture2D_co244")
texture_hover = SubResource("GradientTexture2D_824gr")
stretch_mode = 3
flip_h = true

[node name="cost" type="RichTextLabel" parent="ui/buildOptions/option2"]
layout_mode = 0
offset_left = -48.6667
offset_top = -11.0
offset_right = 76.3333
offset_bottom = 130.0
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_tehq5")
bbcode_enabled = true
text = "[center]Cost:
"
fit_content = true
scroll_active = false

[node name="option3" type="TextureRect" parent="ui/buildOptions"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 404.0
offset_top = 23.0
offset_right = 468.0
offset_bottom = 87.0
scale = Vector2(1.5, 1.5)
texture = SubResource("GradientTexture2D_suc7n")
flip_h = true
metadata/_edit_group_ = true

[node name="outline" type="TextureRect" parent="ui/buildOptions/option3"]
show_behind_parent = true
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_mmqsq")
flip_h = true

[node name="click" type="TextureButton" parent="ui/buildOptions/option3"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
texture_normal = SubResource("GradientTexture2D_qcg7h")
texture_pressed = SubResource("GradientTexture2D_co244")
texture_hover = SubResource("GradientTexture2D_824gr")
stretch_mode = 3
flip_h = true

[node name="cost" type="RichTextLabel" parent="ui/buildOptions/option3"]
layout_mode = 0
offset_left = -48.6667
offset_top = -11.0
offset_right = 76.3333
offset_bottom = 130.0
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_tehq5")
bbcode_enabled = true
text = "[center]Cost:
"
fit_content = true
scroll_active = false

[node name="option4" type="TextureRect" parent="ui/buildOptions"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 560.0
offset_top = 23.0
offset_right = 624.0
offset_bottom = 87.0
scale = Vector2(1.5, 1.5)
texture = SubResource("GradientTexture2D_cxiof")
flip_h = true
metadata/_edit_group_ = true

[node name="outline" type="TextureRect" parent="ui/buildOptions/option4"]
show_behind_parent = true
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_mmqsq")
flip_h = true

[node name="click" type="TextureButton" parent="ui/buildOptions/option4"]
material = SubResource("ShaderMaterial_44d0b")
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
texture_normal = SubResource("GradientTexture2D_qcg7h")
texture_pressed = SubResource("GradientTexture2D_co244")
texture_hover = SubResource("GradientTexture2D_824gr")
stretch_mode = 3
flip_h = true

[node name="cost" type="RichTextLabel" parent="ui/buildOptions/option4"]
layout_mode = 0
offset_left = -48.6667
offset_top = -11.0
offset_right = 76.3333
offset_bottom = 130.0
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_tehq5")
bbcode_enabled = true
text = "[center]Cost:
"
fit_content = true
scroll_active = false

[node name="close" type="TextureButton" parent="ui/buildOptions"]
material = SubResource("ShaderMaterial_suc7n")
layout_mode = 0
offset_left = 690.0
offset_top = -6.0
offset_right = 738.0
offset_bottom = 42.0
rotation = 0.785398
texture_normal = SubResource("GradientTexture2D_avyug")
texture_pressed = SubResource("GradientTexture2D_avyug")
texture_hover = SubResource("GradientTexture2D_u2p0o")

[node name="fakeEnemy" type="CharacterBody2D" parent="." groups=["enemy"]]
position = Vector2(226, 228)
motion_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="fakeEnemy"]
shape = SubResource("CircleShape2D_wis2o")

[node name="baseTexture" type="TextureRect" parent="fakeEnemy"]
material = SubResource("ShaderMaterial_6gguj")
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_k88jk")
metadata/_edit_group_ = true

[node name="outline" type="TextureRect" parent="fakeEnemy/baseTexture"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
material = SubResource("ShaderMaterial_6gguj")
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_oica8")

[node name="click" type="TextureButton" parent="fakeEnemy/baseTexture"]
material = SubResource("ShaderMaterial_6gguj")
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
texture_normal = SubResource("GradientTexture2D_dwjnh")
texture_pressed = SubResource("GradientTexture2D_nywd5")
texture_hover = SubResource("GradientTexture2D_pyayi")
stretch_mode = 3

[node name="HitboxComponent" type="Area2D" parent="fakeEnemy"]
script = ExtResource("6_6gguj")
metadata/_custom_type_script = "uid://l2w56u85nvr0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="fakeEnemy/HitboxComponent"]
shape = SubResource("CircleShape2D_wis2o")

[node name="archerTower" parent="." instance=ExtResource("7_kj7vi")]
position = Vector2(377, 264)

[connection signal="pressed" from="ui/buildOptions/option1/click" to="ui/buildOptions" method="frostClicked"]
[connection signal="pressed" from="ui/buildOptions/option2/click" to="ui/buildOptions" method="archerClicked"]
[connection signal="pressed" from="ui/buildOptions/option3/click" to="ui/buildOptions" method="bombClicked"]
[connection signal="pressed" from="ui/buildOptions/option4/click" to="ui/buildOptions" method="summonerClicked"]
[connection signal="pressed" from="ui/buildOptions/close" to="ui/buildOptions" method="_on_close_pressed"]
